--- a/index.Rmd
+++ b/index.Rmd
@@ -60,26 +60,26 @@ Bagi Calon Mahasiswa Baru yang lulus Seleksi **Bersama Masuk Perguruan Tinggi** 
 
 1.  Jadwal registrasi ulang
 
-    | NO  | SELEKSI | REGISTRASI ULANG            | PEMBAYARAN UKT                 |
-    |:----|:--------|:----------------------------|:-------------------------------|
-    | 1\. | SBMPTN  | 16 - 26 Agustus 2020        | 27 Agustus - 04 September 2020 |
-    | 2\. | SMMPTN  | 02 - 06 September 2020      | 09 - 13 September 2020         |
-    | 3\. | UMM D3  | 10 Juli - 04 September 2020 | 09 - 13 September 2020         |
+    | NO  | SELEKSI | REGISTRASI ULANG | PEMBAYARAN UKT |
+    |:----|:--------|:-----------------|:---------------|
+    | 1\. | SNMPTN  | 29 Maret 2021    |                |
+    | 2\. | SBMPTN  | 14 Juni 2021     |                |
+    | 3\. | SMMPTN  |                  |                |
 
 2.  Pemberkasan secara *online* melalui laman <https://admisi.untirta.ac.id> sesuai dengan jadwal di atas.
 
-    -   *Login* pada laman <https://admisi.untirta.ac.id> dengan *username* Nomor Pendaftaran dan *password* yang kami kirim melalui email anda (**pastikan email yang terdaftar aktif**).
+    -   *Login* pada laman <https://admisi.untirta.ac.id> dengan *username* Nomor Pendaftaran dan *password* yang kami kirim melalui email anda (**pastikan email yang terdaftar aktif**). <br><br>**Cek juga folder SPAM di email anda, karena mungkin email kami masuk ke folder SPAM anda.**
 
-    -   Karena Jadwal Registrasi ulang yang sempit maka Camaba diharapkan agar mempersiapkan Dokumen berikut dalam bentuk pdf (**ukuran file tidak melebihi 260kb**) untuk di-*upload*.
+    -   Karena Jadwal Registrasi ulang yang sempit maka Camaba diharapkan agar mempersiapkan Dokumen berikut dalam bentuk pdf/jpg (**ukuran file tidak melebihi 250kb**) untuk di-*upload*.
 
         1.  Pakta Integritas Uang Kuliah Tunggal
 
-            -   [Jalur SBMPTN dan SMMPTN](https://drive.google.com/file/d/1NZKdSxkkQ_Xqc67esXABnTGOSXUDaarN/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*).
-            -   [Jalur UMM D3 dan Alih Jenjang](https://drive.google.com/file/d/1F19P5ILL59fXVp004ce3mLjBcmfkbjkp/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*).
+            -   [Jalur SNMPTN, SBMPTN dan SMMPTN](https://drive.google.com/file/d/1HyFx0AQQZaZOhc3tI8n2i71dn4yArUAG/view?usp=sharing) Jalur SNMPTN, SBMPTN dan SMMPTN (*download*, isi, *scan*, dan *upload*).
+            -   [Jalur UMM D3 dan Alih Jenjang](https://drive.google.com/file/d/1I-Hlp95MIEqy0e2me2zlcawT9gWvOcDC/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*).<br><br>
 
-        2.  [Surat Pernyataan Mentaati Peraturan](https://drive.google.com/file/d/1PVRiZNWKmgZjpMcnoPaplPmC19CldU3r/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*).
+        2.  [Surat Pernyataan Mentaati Peraturan](https://drive.google.com/file/d/1I0Z1IlYzoADB6NDzP_KfvTTWuJXsZ3Qu/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*).
 
-        3.  Ijazah bagi lulusan tahun 2018, 2019, dan 2020 / Surat Keterangan Lulus bagi lulusan tahun 2020 yang belum memperoleh Ijazah.
+        3.  Ijazah bagi lulusan tahun 2019, 2020 dan 2021 / Surat Keterangan Lulus bagi lulusan tahun 2020 yang belum memperoleh Ijazah.
 
         4.  Kartu Peserta Tes (*scan* dan *upload*).
 
@@ -93,59 +93,68 @@ Bagi Calon Mahasiswa Baru yang lulus Seleksi **Bersama Masuk Perguruan Tinggi** 
 
             ![](pln.PNG)
 
-        8.  SPPT Pajak Bumi dan Bangunan (PBB) Tahun 2017/2018/2019 **atau** [Surat Pernyataan tentang Luas Tanah dan Bangunan Rumah yang ditempati bagi yang tidak punya SPPT](https://drive.google.com/file/d/1N_psISSck4wNBiVjphcQqBRLAIKMPWF6/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*).
+        8.  SPPT Pajak Bumi dan Bangunan (PBB) Tahun 2017/2018/2019 **atau** [Surat Pernyataan tentang Luas Tanah dan Bangunan Rumah yang ditempati bagi yang tidak punya SPPT](https://drive.google.com/file/d/1HxczESstO4LjNTLd5_oQNXy0FQPAG96-/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*).
 
-        9.  Surat Keterangan Kesehatan dan Tes Narkoba untuk **semua Program Studi** dan Surat Pemeriksaan Buta Warna untuk **Program Studi berikut** (*scan*, jadikan 1 file, dan *upload*)
+            1.  Surat Keterangan Kesehatan dan Tes Narkoba untuk **semua Program Studi** dan Surat Pemeriksaan Buta Warna untuk **Program Studi berikut** (*scan*, jadikan 1 file, dan *upload*)
 
-            | No.  | Program Studi                        | Keterangan                                      |
-            |:-----|:-------------------------------------|:------------------------------------------------|
-            | 1\.  | Pendidikan Biologi                   | Tidak Boleh Buta Warna                          |
-            | 2\.  | Pendidikan Kimia                     |                                                 |
-            | 3\.  | Pendidikan Fisika                    |                                                 |
-            | 4\.  | Pendidikan IPA                       |                                                 |
-            | 5\.  | Pendidikan Vokasional Teknik Elektro |                                                 |
-            | 6\.  | Pendidikan Vokasional Teknik Mesin   |                                                 |
-            | 7\.  | PGPAUD                               | Tidak Boleh Buta Warna                          |
-            | 8\.  | Teknik Industri                      | Buta Warna Sebagian/Partial masih diperbolehkan |
-            | 9\.  | Teknik Elektro                       | Tidak Boleh Buta Warna                          |
-            | 10\. | Teknik Sipil                         | Tidak Boleh Buta Warna                          |
-            | 11\. | Teknik Kimia                         | Tidak Boleh Buta Warna                          |
-            | 12\. | Teknik Mesin                         |                                                 |
-            | 13\. | Teknik Metalurgi                     |                                                 |
-            | 14\. | Agroekoteknologi                     | Tidak Boleh Buta Warna                          |
-            | 15\. | Ilmu Perikanan                       | Buta Warna Sebagian/Partial masih diperbolehkan |
-            | 16\. | Teknologi Pangan                     | Buta Warna Sebagian/Partial masih diperbolehkan |
-            | 17\. | Agribisnis                           |                                                 |
-            | 18\. | Gizi                                 | Tidak Boleh Buta Warna                          |
-            | 19\. | Keperawatan (D3)                     | Tidak Boleh Buta Warna                          |
-            | 20\. | Ilmu Keperawatan (S1)                | Tidak Boleh Buta Warna                          |
-            | 21\. | Kedokteran                           | Tidak Boleh Buta Warna                          |
-            | 22\. | Ilmu Keolahragaan                    | Tidak Boleh Buta Warna                          |
+                | No.  | Program Studi                            | Keterangan                              |
+                |:-----|:-----------------------------------------|:----------------------------------------|
+                | 1\.  | Pendidikan Non Formal                    | Tidak Boleh Buta Warna                  |
+                | 2\.  | Pendidikan Bahasa Indonesia              | Tidak Boleh Buta Warna                  |
+                | 3\.  | Pendidikan Bahasa Inggris                | Tidak Boleh Buta Warna                  |
+                | 4\.  | Pendidikan Biologi                       | Tidak Boleh Buta Warna                  |
+                | 5\.  | Pendidikan Matematika                    | Tidak Boleh Buta Warna                  |
+                | 6\.  | Pendidikan Guru Sekolah Dasar            | Tidak Boleh Buta Warna                  |
+                | 7\.  | PGPAUD                                   | Tidak Boleh Buta Warna                  |
+                | 8\.  | Pendidikan Fisika                        | Tidak Boleh Buta Warna                  |
+                | 9\.  | Pendidikan IPA                           | Tidak Boleh Buta Warna                  |
+                | 10\. | Pendidikan Kimia                         | Tidak Boleh Buta Warna                  |
+                | 11\. | Pendidikan Vokasional Teknik Mesin       | Tidak Boleh Buta Warna                  |
+                | 12\. | Pendidikan Vokasional Teknik Elektro     | Tidak Boleh Buta Warna                  |
+                | 13\. | Bimbingan dan Konseling                  | Tidak Boleh Buta Warna                  |
+                | 14\. | Pendidikan Pancasila dan Kewarganegaraan | Tidak Boleh Buta Warna                  |
+                | 15\. | Pendidikan Sejarah                       | Tidak Boleh Buta Warna                  |
+                | 16\. | Pendidikan Seni Pertunjukan              | Tidak Boleh Buta Warna                  |
+                | 17\. | Pendidikan Sosiologi                     | Tidak Boleh Buta Warna                  |
+                | 18\. | Teknik Mesin                             | Tidak Boleh Buta Warna                  |
+                | 19\. | Teknik Elektro                           | Tidak Boleh Buta Warna                  |
+                | 20\. | Teknik Industri                          | Buta Warna Sebagian/Partial masih boleh |
+                | 21\. | Teknik Metalurgi                         | Tidak Boleh Buta Warna                  |
+                | 22\. | Teknik Kimia                             | Tidak Boleh Buta Warna                  |
+                | 23\. | Teknik Sipil                             | Tidak Boleh Buta Warna                  |
+                | 23\. | Informatika                              | Tidak Boleh Buta Warna                  |
+                | 24\. | Kedokteran                               | Tidak Boleh Buta Warna                  |
+                | 25\. | Gizi                                     | Tidak Boleh Buta Warna                  |
+                | 26\. | Ilmu Keolahragaan                        | Tidak Boleh Buta Warna                  |
+                | 27\. | Keperawatan (D3 & S1)                    | Tidak Boleh Buta Warna                  |
+                |      |                                          |                                         |
 
-        10. Bukti Penghasilan Ayah dan Penghasilan Ibu dengan ketentuan sebagai berikut (*scan* dan *upload*):
+        9.  Bukti Penghasilan Ayah dan Penghasilan Ibu atau Wali yang membiayai Kuliah dengan ketentuan sebagai berikut (*scan* dan *upload*):
 
-            -   **PNS**/**TNI**/**BUMN**/**Karyawan Swasta**: Slip Gaji / Bukti Penghasilan (bulan Juli atau Agustus),
-            -   **Wiraswasta**/**Petani**/**Pedagang**/**Buruh**/**Tidak Mempunyai Pekerjaan Tetap** : [Surat Pernyataan Penghasilan bermaterai dan ditandatangani Orang tua/Wali](https://drive.google.com/file/d/1NZq31ZS_zoJofnCPWnpP07nOvCYvRSM0/view?usp=sharing){target="_blank"} (*download*, isi, *scan*, dan *upload*),
-            -   **Pensiunan** : Rekening Koran atau *print out* Buku Rekening Pensiun (bulan Juli atau Agustus).
+            -   **PNS**/**TNI**/**BUMN**/**Karyawan Swasta**: Slip Gaji / Bukti Penghasilan (max dua bulan terakhir),
+            -   **Wiraswasta**/**Petani**/**Pedagang**/**Buruh**/**Tidak Mempunyai Pekerjaan Tetap** : Surat Keterangan Penghasilan dari Kelurahan dengan mencantumkan nama Pekerjaan dan Nominal Penghasilannya
+            -   **Pensiunan** : Rekening Koran atau *print out* Buku Rekening Pensiun (max dua bulan terakhir).<br><br>
 
-    -   **Berkas tambahan bagi pendaftar KIP-Kuliah khusus jalur SNMPTN dan SBMPTN (format pdf tidak lebih dari 266 KB)**:
+    -   **Berkas tambahan bagi pendaftar KIP-Kuliah khusus jalur SNMPTN dan SBMPTN (format pdf /jpg tidak lebih dari 250 KB)**:
 
         1.  Bukti registrasi KIP-Kuliah (*scan* dan *upload*)
         2.  Peta rute menuju rumah dari kota terdekat (*scan* dan *upload*)
-        3.  Foto rumah tampak depan, tampak samping, dan tampak belakang. Jadikan 1 file (*upload*)
+        3.  Foto rumah tampak depan, tampak samping, dan tampak belakang. Jadikan 1 file (*upload*) <br><br>
+
+    **KETENTUAN PHOTO DIRI**
 
 3.  *Upload* foto diri, dengan ketentuan:
 
     -   Laki-laki (jas hitam, baju putih, dasi hitam, *background* merah, ukuran (4×6)),
     -   Perempuan (jas hitam/blazer, baju putih, dasi hitam, *background* merah, ukuran ( 4×6)),
     -   Perempuan berjilbab (jilbab warna putih, *background* merah, jas hitam/blazer tanpa dasi, ukuran (4×6)),
-    -   Format file adalah JPG.
+    -   Format file adalah JPG.<br><br>
 
-4.  Isilah dengan **benar**, **akurat**, dan **jujur** semua data diri anda.\
+4.  Isilah dengan **BENAR**, **AKURAT**, dan **JUJUR** semua data diri anda.\
 
-5.  Penetapan UKT dikirim melalui email masing masing calon mahasiswa setelah menyelesaikan proses 2 hingga 4.\
+5.  Penetapan UKT akan dikirim melalui email masing masing calon mahasiswa setelah menyelesaikan proses 2 hingga 4 dan sesuai Jadwal Pembayaran UKT. <br><br>**Cek juga folder SPAM di email anda, karena mungkin email kami masuk ke folder SPAM anda.**\
 
-6.  Tatacara pembayaran UKT dapat dilihat [di sini](http://bit.ly/tirtaUKT){target="_blank"}.\
+6.  Tatacara pembayaran UKT dapat dilihat [di sini](https://drive.google.com/file/d/1IIaFh62Irl6cK4EpdaTqcwOk3OMfmH8t/view?usp=sharing){target="_blank"}. <br>\
 
 7.  **Lain-lain**:
 
