--- a/index.Rmd
+++ b/index.Rmd
@@ -170,4 +170,4 @@ dan juga untuk Registrasi Pendaftaran jalur **Ujian Masuk Mandiri** (**UMM**) **
 
     -   Hal yang belum jelas bisa ditanyakan melalui email [**registrasi\@untirta.ac.id**](mailto:registrasi@untirta.ac.id){.email}. atau **Hotline :**
 
-        **Registrasi : 0813-1173-4542**
+        [**Registrasi : 0813-1173-4542**](http://wa.me/6281311734542)
